--- a/AngularProject/Goals/src/app/goal-detail/goal-detail.component.html
+++ b/AngularProject/Goals/src/app/goal-detail/goal-detail.component.html
@@ -1,2 +1,3 @@
 <p>{{goal.descrp}}</p>
-<button (click)="goalDelete(true)">Delete Goal</button>
+<p>This goal will be complete in {{goal.completeDate|dateCount}} days</p>
+<button (click)="goalDelete(true)" class="btn btn-outline-danger">Delete Goal</button>
