--- a/AngularProject/Goals/src/app/goal/goal.component.html
+++ b/AngularProject/Goals/src/app/goal/goal.component.html
@@ -1,14 +1,29 @@
 <!-- <p>goal works!</p> -->
-<div>
+<div class ="container">
   <h1>My goals</h1>
-  <ul>
-    <div *ngFor='let goal of goals; let i = index'>
-     
-      <li appStrikethrough> {{goal.name|uppercase}} due on {{goal.completeDate|date|uppercase}} </li>
-      <button (click)='toggleDetails(i)'>Toggle Details</button>
-      <app-goal-detail *ngIf='goal.showDescription' [goal]='goal' (isComplete)='deleteGoal($event, i)'></app-goal-detail>
+  <hr>
+  <div class="row">
+    <div class="col-md-6">
+      
+        <div *ngFor='let goal of goals; let i = index'>
+          <div>
+            <h4 id="{{i}}" appStrikethrough> {{goal.name|uppercase}} due on {{goal.completeDate|date|uppercase}}               
+            </h4>
+            <button (click)='toggleDetails(i)'>Toggle Details</button>
+            <div *ngIf='goal.showDescription'>
+              <app-goal-detail [goal]='goal' (isComplete)='deleteGoal($event, i)'></app-goal-detail>
+
+            </div>
+            
+          </div>
+        
+          
+  
+        </div>
+      
 
     </div>
-  </ul>
+    
+  </div>
   <p *ngIf='goals.length > 2'>Your goals are too many</p>
 </div>
