--- a/AngularProject/Goals/src/app/goal/goal.component.html
+++ b/AngularProject/Goals/src/app/goal/goal.component.html
@@ -23,6 +23,9 @@
       
 
     </div>
+    <div class="col-md-6">
+      <app-goal-form (addGoal)="addNewGoal($event)"></app-goal-form>
+    </div>
     
   </div>
   <p *ngIf='goals.length > 2'>Your goals are too many</p>
